--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "spryker/maintenance",
   "autoload": {
     "psr-0": {
-      "SprykerFeature": "src/",
+      "Spryker": "src/",
       "Acceptance": "tests/",
       "Function": "tests/",
       "Integration": "tests/",
