--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     }
   },
   "require": {
+    "spryker/tool-graph": "^1.0.0",
+    "spryker/tool-graph-phpdocumentor": "^1.0.0"
   },
   "require-dev": {
   }
