--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     "spryker/console": "^1.0.0",
     "spryker/kernel": "^1.0.0",
     "spryker/library": "^1.0.0",
-    "spryker/tool-graph": "^1.0.0",
-    "spryker/tool-graph-php-documentor": "^1.0.0"
+    "spryker/graph": "^1.0.0",
+    "spryker/graph-php-documentor": "^1.0.0"
   },
   "require-dev": {},
   "description": "maintenance bundle",
