--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,11 @@
     }
   },
   "require": {
-    "spryker/": "^1.0.0",
     "spryker/application": "^1.0.0",
     "spryker/console": "^1.0.0",
     "spryker/kernel": "^1.0.0",
     "spryker/library": "^1.0.0",
-    "spryker/graph": "^1.0.0",
-    "spryker/graph-php-documentor": "^1.0.0"
+    "spryker/graph": "^1.0.0"
   },
   "require-dev": {},
   "description": "maintenance bundle",
