--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     "spryker/console": "^1.0.0",
     "spryker/kernel": "^1.0.0",
     "spryker/library": "^1.0.0",
-    "spryker/graph": "^1.0.0",
-    "spryker/external": "^1.0.0"
+    "spryker/graph": "^1.0.0"
   },
   "require-dev": {},
   "description": "maintenance bundle",
