--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     "spryker/console": "^1.0.0",
     "spryker/kernel": "^1.0.0",
     "spryker/library": "^1.0.0",
-    "spryker/graph": "^1.0.0"
+    "spryker/graph": "^1.0.0",
+    "spryker/symfony": "^1.0.0",
+    "spryker/zend": "^1.0.0"
   },
   "require-dev": {},
   "description": "maintenance bundle",
