--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
   "require": {
     "spryker/application": "^1.0.0-RC1",
     "spryker/kernel": "^1.0.0-RC1",
-    "spryker/library": "1.0.0-rc.1",
-    "spryker/graph": "1.0.0-rc.1",
-    "spryker/symfony": "1.0.0-rc.1",
-    "spryker/zend": "1.0.0-rc.1"
+    "spryker/library": "1.0.0-RC1",
+    "spryker/graph": "1.0.0-RC1",
+    "spryker/symfony": "1.0.0-RC1",
+    "spryker/zend": "1.0.0-RC1"
   },
   "description": "maintenance bundle",
   "license": "proprietary",
