--- a/composer.json
+++ b/composer.json
@@ -10,20 +10,20 @@
     }
   },
   "require": {
-    "spryker/application": "^1.0.0-RC2",
-    "spryker/kernel": "^1.0.0-RC2",
-    "spryker/library": "^1.0.0-RC2",
-    "spryker/graph": "^1.0.0-RC2",
-    "spryker/symfony": "^1.0.0-RC2",
-    "spryker/zend": "^1.0.0-RC2"
+    "spryker/application": "^2.0.0-RC1",
+    "spryker/kernel": "^2.0.0-RC1",
+    "spryker/library": "^2.0.0-RC1",
+    "spryker/graph": "^2.0.0-RC1",
+    "spryker/symfony": "^2.0.0-RC1",
+    "spryker/zend": "^2.0.0-RC1"
   },
   "description": "maintenance bundle",
   "license": "proprietary",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true,
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0.x-dev"
+      "dev-master": "2.0.x-dev"
     }
   }
 }
