--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     }
   },
   "require": {
-    "spryker/application": "^2.0.0-RC2",
-    "spryker/kernel": "^2.0.0-RC2",
-    "spryker/library": "^2.0.0-RC2",
-    "spryker/graph": "^2.0.0-RC2",
-    "spryker/symfony": "^2.0.0-RC2",
-    "spryker/zend": "^2.0.0-RC2"
+    "spryker/application": "^2.0.0",
+    "spryker/kernel": "^2.0.0",
+    "spryker/library": "^2.0.0",
+    "spryker/graph": "^2.0.0",
+    "spryker/symfony": "^2.0.0",
+    "spryker/zend": "^2.0.0"
   },
   "description": "maintenance bundle",
   "license": "proprietary",
