--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,7 @@
   },
   "require": {
     "spryker/application": "^2.0.0",
-    "spryker/graph": "^2.0.0",
-    "spryker/kernel": "^2.0.0",
-    "spryker/library": "^2.0.0",
-    "spryker/symfony": "^2.0.0",
-    "spryker/zend": "^2.0.0"
+    "spryker/kernel": "^2.0.0"
   },
   "description": "Maintenance bundle",
   "license": "proprietary",
