--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
     "spryker/kernel": "^3.30.0",
     "spryker/symfony": "^3.0.0"
   },
+  "require-dev": {
+    "spryker/code-sniffer": "*"
+  },
   "autoload": {
     "psr-4": {
       "Spryker\\": "src/Spryker/"
